--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/news_service?useSSL=false&amp&serverTimezone=UTC
 spring.datasource.username=Roman
-spring.datasource.password=Roman 
+spring.datasource.password=Roman
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
